style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
v2.0 | 20110126
License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}


/* HTML5 display-role reset for older browsers */

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
    display: block;
}

body {
    line-height: 1;
}

ol,
ul {
    list-style: none;
}

blockquote,
q {
    quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
    content: '';
    content: none;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
html {
    height: 100vh;
    background: rgba(19, 25, 37, 1);
}

body {
    background: rgba(19, 25, 37, 1);
    margin: 0;
    height: 100vh;
    background-repeat: no-repeat;
    background-attachment: fixed;
    font-family: 'Montserrat', sans-serif;
    color: white;
}

.name {
    font-size: 2vw;
}

.hor {
    display: flex;
    flex-direction: row;
    width: 100vw;
    height: 100vh;
}

.ver {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100vw;
    height: 100vh;
}

.profile {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    height: 45vh;
    width: 65vw;
    font-size: 6vw;
    font-weight: 700;
    text-align: center;
}

.profile h1,
h3 {
    height: 2vh 0;
}

.profilePicture {
    border-radius: 100%;
    width: 27vh;
}

.apps {
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: nowrap;
}

.app {
    border: 3px white solid;
    border-radius: .5rem;
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 60vw;
    padding: 1.35vh;
    cursor: pointer;
}

.icon {
    width: 25vw;
    font-size: 5vw;
}

.website {
    width: 75vw;
    text-align: center;
    font-size: 4.5vw;
    font-weight: 700;
}

.profile:hover {
    background: #f09433;
    background: -moz-linear-gradient(45deg, rgb(24, 24, 88) 0%, #0a66c2 100%);
    background: -webkit-linear-gradient(45deg, rgb(24, 24, 88) 0%, #0a66c2 100%);
    background: linear-gradient(45deg, rgb(24, 24, 88) 0%, #0a66c2 100%);
    color: white;
    border-radius: 2rem;
    transform: translateY(-.75vh);
    margin-bottom: .5em;
    box-shadow: 0em .5em .5em rgba(10, 102, 194, .25);
}

.app:hover {
    transform: translateY(-.75vh);
}

.envelope:nth-of-type(1):hover {
    background-color: white;
    color: black;
    box-shadow: 0em .5em .5em rgba(255, 255, 255, .25);
}

.linkedin:nth-of-type(2):hover {
    background-color: #0a66c2;
    color: white;
    border: #0a66c2;
    box-shadow: 0em .5em .5em rgba(10, 102, 194, .5);
}

.github:nth-of-type(3):hover {
    background-color: white;
    color: black;
    box-shadow: 0em .5em .5em rgba(255, 255, 255, .25);
}

.discord:nth-of-type(4):hover {
    background-color: #6a80ca;
    border: 1px solid #6a80ca;
    box-shadow: 0em .5em .5em rgba(106, 128, 202, .5);
}

.instagram:nth-of-type(5):hover {
    background: #f09433;
    background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
    background: -webkit-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
    background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888', GradientType=1);
    border: none;
    box-shadow: 0em .5em .5em rgba(220, 39, 67, .25);
}

.twitch:nth-of-type(6):hover {
    border: #9147ff;
    background-color: #9147ff;
    box-shadow: 0em .5em .5em rgba(145, 71, 255, .5);
}

@media (min-width: 500px) and (max-width: 729px) {
    .profile h1,
    h3 {
        font-size: 2rem;
    }
    .app {
        width: 275px;
        height: 1.5rem;
    }
    .icon {
        font-size: 1.5em;
    }
    .website {
        font-size: 1.25em;
    }
}

@media (max-width: 729px) {
    .bio {
        visibility: collapse;
        height: 0vh;
        height: 0vh;
    }
    .apps {
        flex-wrap: nowrap;
        flex-direction: column;
        justify-content: space-around;
        height: 65vh;
    }
}

@media (min-width: 730px) {
    .bio {
        visibility: c;
        height: fit-content;
        width: 85vw;
        text-align: center;
        margin: 1rem 0;
        font-size: 2.5vw;
    }
    .apps {
        flex-wrap: wrap;
        flex-direction: row;
        justify-content: space-evenly;
        height: 40vh;
    }
    .app {
        width: 10vw;
    }
    .profile {
        height: 18rem;
        width: 25rem;
        margin-top: 1rem;
    }
    .app {
        width: 21rem;
    }
    .profile {
        font-size: 2rem;
    }
    .website {
        font-size: 1.5rem;
    }
    .icon {
        font-size: 1.5rem;
    }
}

@media (min-width: 800px) {
    .bio {
        visibility: c;
        font-size: 1.25em;
        width: 40rem;
    }
}

@media (min-width: 1000px) {
    .bio {
        visibility: c;
    }
    .apps {
        flex-wrap: nowrap;
        flex-direction: column;
        justify-content: space-around;
        height: 65vh;
    }
    .app {
        width: 275px;
        height: 1.5rem;
    }
    .icon {
        font-size: 1.5em;
    }
    .website {
        font-size: 1.25em;
    }
}

